--- a/application/views/css/startpage.css
+++ b/application/views/css/startpage.css
@@ -8,6 +8,7 @@ body {
     margin-right: 0px;
     margin-bottom: 0px;
     font-family: Arial,Helvetica,sans-serif;
+    font-size: 11px;
 }
 
 #apDiv1 {
@@ -231,4 +232,16 @@ h1 {
 #center-cont .column50 {
     width: 50%;
     float: left;
+}
+
+.style1 {font-size: 16px}
+.style2 {font-size: 24px}
+.style3 {font-size: 10px}
+
+a {
+    color: #00CCFF;
+}
+
+#left-cont .part {
+    margin: 5px 10px;
 }
