--- a/application/views/css/main.css
+++ b/application/views/css/main.css
@@ -1529,11 +1529,47 @@ ul.brands3{
 }
 
 .twitt_button {
-    background: transparent url("/images/tweet-button.png");
-    width: 121px;
-    height: 28px;
+    color: #fff;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+    border-color: #74bb5a;
+    border-bottom-color: #509338;
+    background-color: #60b044;
+    background-image: -moz-linear-gradient(#8add6d, #60b044);
+    background-image: -webkit-linear-gradient(#8add6d, #60b044);
+    background-image: linear-gradient(#8add6d, #60b044);
+    background-repeat: repeat-x;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2) ;
+    outline: medium none;
+    overflow: hidden;
+    border-radius: 3px;
+    border-bottom-color: #bcbcbc;
     display: inline-block;
+    padding: 8px 15px;
+    line-height: normal;
+    position: relative;
+    font-family: Helvetica, arial, freesans, clean, sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
 }
+
+.twitt_button:hover {
+    background-color: #4c8b36;
+    background-image: -moz-linear-gradient(#69d344, #4c8b36);
+    background-image: -webkit-linear-gradient(#69d344, #4c8b36);
+    background-image: linear-gradient(#69d344, #4c8b36);
+    background-repeat: repeat-x;
+    border-color: #4a993e;
+    color: #fff
+}
+
+
 
 .photo_cont {
     width: 600px;
