--- a/application/views/css/main.css
+++ b/application/views/css/main.css
@@ -1533,10 +1533,10 @@ ul.brands3{
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
     border-color: #74bb5a;
     border-bottom-color: #509338;
-    background-color: #60b044;
-    background-image: -moz-linear-gradient(#8add6d, #60b044);
-    background-image: -webkit-linear-gradient(#8add6d, #60b044);
-    background-image: linear-gradient(#8add6d, #60b044);
+    background-color: #019AD2;
+    background-image: -moz-linear-gradient(#33BCEF, #019AD2);
+    background-image: -webkit-linear-gradient(#33BCEF, #019AD2);
+    background-image: linear-gradient(#33BCEF, #019AD2);
     background-repeat: repeat-x;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2) ;
     outline: medium none;
@@ -1561,13 +1561,21 @@ ul.brands3{
 
 .twitt_button:hover {
     background-color: #4c8b36;
-    background-image: -moz-linear-gradient(#69d344, #4c8b36);
-    background-image: -webkit-linear-gradient(#69d344, #4c8b36);
-    background-image: linear-gradient(#69d344, #4c8b36);
-    background-repeat: repeat-x;
+    background-image: -moz-linear-gradient(#2DADDC, #0271BF);
+    background-image: -webkit-linear-gradient(#2DADDC, #0271BF);
+    background-image: linear-gradient(#2DADDC, #0271BF);
     border-color: #4a993e;
-    color: #fff
+    color: #fff;
 }
+
+.twitt_button.mousedown {
+      background-color: #4c8b36;
+      background-image: -moz-linear-gradient(#019AD2,#33BCEF);
+      background-image: -webkit-linear-gradient(#019AD2,#33BCEF);
+      background-image: linear-gradient(#019AD2,#33BCEF);
+      border-color: #4a993e;
+       color: #fff;
+  }
 
 
 
