--- a/application/views/css/main.css
+++ b/application/views/css/main.css
@@ -1296,6 +1296,7 @@ form input[type="submit"].jevels_payment{
     background-size: auto 130px;
     background-position: center;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 .photo_tumb .likes, .photo_tumb .comments, .photo_tumb .delete {
     margin-top: 4px;
