--- a/application/views/css/main.css
+++ b/application/views/css/main.css
@@ -1316,8 +1316,10 @@ form input[type="submit"].jevels_payment{
 }
 
 .photo_tumb .delete {
+    height: 12px;
+    left: 62px;
     top: 2px;
-    right: 2px;
+    width: 12px;
 }
 
 .photo_tumb .del_photo{
