--- a/application/views/css/main.css
+++ b/application/views/css/main.css
@@ -1316,18 +1316,20 @@ form input[type="submit"].jevels_payment{
 }
 
 .photo_tumb .delete {
-    height: 12px;
-    left: 52px;
-    top: 2px;
-    width: 12px;
+    height: 25px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    background-color: #FFF;
+    opacity: .9;
+    text-align: right;
 }
 
-.photo_tumb .edit {
-    height: 12px;
-    left: 72px;
-    top: 2px;
-    width: 12px;
+.photo_tumb .delete a{
+    display: inline-block;
+    margin-right: 10px;
 }
+
 
 .photo_tumb .del_photo{
     position: absolute;
