--- a/application/views/css/startpage.css
+++ b/application/views/css/startpage.css
@@ -147,7 +147,7 @@ body {
     background: transparent url("/images/email-button.png") no-repeat;
 }
 
-.sidetitle h1 { text-transform:uppercase;
+.sidetitle h1, .page_title { text-transform:uppercase;
     font-family:tahoma;
     text-shadow:1px 1px #f734bb;
     color:#FFF;
@@ -289,4 +289,96 @@ a img { padding:3px;
     border:1px solid #DDD;
 }
 a:hover img{ border:1px solid #EEE
+}
+
+
+.cool-button {
+    color: #fff;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+    border-color: #74bb5a;
+    border-bottom-color: #509338;
+    background-color: #019AD2;
+    background-image: -moz-linear-gradient(#33BCEF, #019AD2);
+    background-image: -webkit-linear-gradient(#33BCEF, #019AD2);
+    background-image: linear-gradient(#33BCEF, #019AD2);
+    background-repeat: repeat-x;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2) ;
+    outline: medium none;
+    overflow: hidden;
+    border-radius: 3px;
+    border-bottom-color: #bcbcbc;
+    display: inline-block;
+    padding: 8px 15px;
+    line-height: normal;
+    position: relative;
+    font-family: Helvetica, arial, freesans, clean, sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
+}
+
+.cool-button:hover {
+    background-color: #4c8b36;
+    background-image: -moz-linear-gradient(#2DADDC, #0271BF);
+    background-image: -webkit-linear-gradient(#2DADDC, #0271BF);
+    background-image: linear-gradient(#2DADDC, #0271BF);
+    border-color: #4a993e;
+    color: #fff;
+}
+
+.cool-button.mousedown {
+    background-color: #4c8b36;
+    background-image: -moz-linear-gradient(#019AD2,#33BCEF);
+    background-image: -webkit-linear-gradient(#019AD2,#33BCEF);
+    background-image: linear-gradient(#019AD2,#33BCEF);
+    border-color: #4a993e;
+    color: #fff;
+}
+
+.twitt_button {
+    background-color: #019AD2;
+    background-image: -moz-linear-gradient(#33BCEF, #019AD2);
+    background-image: -webkit-linear-gradient(#33BCEF, #019AD2);
+    background-image: linear-gradient(#33BCEF, #019AD2);
+}
+
+.twitt_button:hover {
+    background-color: #4c8b36;
+    background-image: -moz-linear-gradient(#2DADDC, #0271BF);
+    background-image: -webkit-linear-gradient(#2DADDC, #0271BF);
+    background-image: linear-gradient(#2DADDC, #0271BF);
+}
+
+.twitt_button.mousedown {
+    background-color: #4c8b36;
+    background-image: -moz-linear-gradient(#019AD2,#33BCEF);
+    background-image: -webkit-linear-gradient(#019AD2,#33BCEF);
+    background-image: linear-gradient(#019AD2,#33BCEF);
+}
+
+.fb-button {
+    background-color: #3B5998;
+    background-image: -moz-linear-gradient(#D8DFEA, #3B5998);
+    background-image: -webkit-linear-gradient(#D8DFEA, #3B5998);
+    background-image: linear-gradient(#D8DFEA, #3B5998);
+}
+
+.fb-button:hover {
+    background-color: #3B5998;
+    background-image: -moz-linear-gradient(#a0a6b1, #35457e);
+    background-image: -webkit-linear-gradient(#a0a6b1, #35457e);
+    background-image: linear-gradient(#a0a6b1, #35457e);
+}
+
+.fb-button.mousedown {
+    background-color: #3B5998;
+    background-image: -moz-linear-gradient(#3B5998,#D8DFEA);
+    background-image: -webkit-linear-gradient(#3B5998,#D8DFEA);
+    background-image: linear-gradient(#3B5998,#D8DFEA);
 }
